external-crates/move/crates/move-compiler/tests/sui_mode/id_leak/invalid_object_native.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: sui
  edition: legacy
  lint: false
---
error[E04015]: invalid use of native item
  ┌─ tests/sui_mode/id_leak/invalid_object_native.move:5:9
  │
2 │     native struct S has key;
  │     ------ Struct declared 'native' here
  ·
5 │         S {}
  │         ^^^^ Invalid argument usage for native struct 'a::test::S'. Native structs cannot be directly constructed/deconstructed, and their fields cannot be dirctly accessed
